[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glory"
version = "0.1.0"  # Ensure this matches the version in your __init__.py
description = "A python package for estimating global reservoir yield and costs for water supply."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Mengqi Zhao", email = "mengqi.zhao@pnnl.gov"}
]
urls = { "Homepage" = "https://github.com/JGCRI/glory" }

[project.dependencies]
requests = ">=2.25.1"
pandas = ">=1.5"
numpy = ">=1.23"
PyYAML = ">=6"
scipy = "~=1.11.2"
pyomo = "~=6.6.2"
matplotlib = "~=3.7.2"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "autodoc>=0.5.0",
    "twine>=4.0.1",
    "ipykernel>=6.15.1",
    "nbsphinx~=0.8.6",
    "sphinx~=7.2.6",
    "sphinx-design~=0.5.0",
    "sphinx-rtd-theme~=2.0.0",
    "sphinx-mathjax-offline~=0.0.2"
]
